--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "fideloper/proxy": "~3.3",
         "ixudra/curl": "^6.16",
         "jeroennoten/laravel-adminlte": "^1.23",
+        "laracasts/flash": "^3.0",
         "laravel/framework": "5.5.*",
         "laravel/passport": "~4.0",
         "laravel/tinker": "~1.0"
